<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5px"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bgHeader"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="-5dp"
        android:contentDescription="line for Header"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/line_cima"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <ImageView
        android:id="@+id/iconeBalanceGeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="line for Balance img"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/body_scale_small"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-7dp" />

    <ImageView
        android:id="@+id/bgFooter"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:contentDescription="line for footer"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/footer_other"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-7dp" />

    <TextView
        android:id="@+id/tv_Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="105dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/insertScreenTitulo"
        android:textColor="@color/titulo_color_bolde"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="348dp"
        android:layout_height="61dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/corner"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:text="@string/bt_Calcular"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/Description_color"
        app:elevation="8dp"
        app:iconPadding="10dp"
        app:iconTint="#F6F1F1" />

    <Button
        android:id="@+id/btVoltarTelaInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/bgFooter"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="7dp"
        android:background="#00FFFFFF"
        android:drawableLeft="@drawable/ic_baseline_arrow_left"
        android:text="@string/bt_Voltar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edTextPeso"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:drawableLeft="@drawable/ic_baseline_pregnan"
        android:ems="10"
        android:hint="@string/txt_hit_edPeso"
        android:inputType="numberDecimal"
        android:textColorHint="#9A9C27B0" />

    <EditText
        android:id="@+id/edTextAltura"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="250dp"
        android:drawableLeft="@drawable/ic_baseline_height"
        android:ems="10"
        android:hint="@string/txt_hit_edAltura"
        android:inputType="numberDecimal"
        android:textColorHint="#9A9C27B0" />


</RelativeLayout>