<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5px"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bgHeader1"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginTop="-5dp"
        android:contentDescription="line for Header"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/line_cima"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <ImageView
        android:id="@+id/iconeBalanceGeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:contentDescription="line for Header"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/body_scale_big"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-7dp" />

    <ImageView
        android:id="@+id/bgFooter"
        android:layout_width="wrap_content"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:contentDescription="line for footer"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/footer_geral"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-7dp" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mainScreenTitulo"
        android:textColor="@color/titulo_color"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_imc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="170dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/mainScreenTitulo_bold"
        android:textColor="@color/titulo_color_bolde"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="220dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="2sp"
        android:paddingEnd="30dp"
        android:paddingRight="30dp"
        android:shadowColor="@color/Description_color"
        android:text="@string/mainScreenDescriptionText"
        android:textColor="@color/Description_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btComecar"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/bgFooter"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/corner"
        android:drawableRight="@drawable/ic_arrow"
        android:text="@string/bt_Text"
        android:textColor="@color/Description_color"
        app:backgroundTint="@color/white"
        app:elevation="8dp"
        app:icon="@drawable/ic_arrow"
        app:iconPadding="10dp"
        app:iconTint="@color/Description_color" />


</RelativeLayout>